# cogitarelink-n3

./: .env.example  .gitignore  01_cl_n3.ipynb  02_cl-hazard.ipynb  README.md  cogitarelink.md  da-plan.md  data.ttl  demo_agent.py  ext_rules.n3  eye-js.md  main.py  package-lock.json  package.json  patch_reason_sandbox.py  patch_reason_tool.py  pyproject.toml  rules.n3
hazard/: ModifiedHazardousSituation.owl  haz-axioms.n3  haz-logic.n3  haz-shapes.ttl  haz.context.jsonld  haz.vocab.ttl  readme.md  scenario.jsonld
js/: eye-runner.mjs
llmstxt/: cosette.md  notation-3.md
tests/: test_eye_integration.py  test_reason_tool.py
